--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_refresh"
-        android:title="REFRESH"
+        android:title="SET URL"
         android:orderInCategory="100"
         app:showAsAction="never" />
 
